# rbc-project-physics

./: .gitignore  README.md  pyproject.toml  rbc_project.json  test_uipc.py
assets/: bunny.obj.rbcmt  cornell_box.obj.rbcmt  test_grid.png.rbcmt  test_scene.scene  test_scene.scene.rbcmt
docs/: init_project.md
