[project]
name = "rbc-project-default"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.59.0",
    "google-generativeai>=0.8.6",
    "pillow>=12.1.0",
]


[tool.uv]
conflicts = [
  [
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[project.optional-dependencies]
cu128 = [
  "torch>=2.9.1",
  "torchvision>=0.24.0",
  "diffusers>=0.35.2",
  "transformers>=4.57.3",
  "accelerate>=1.12.0",
]
cu130 = [
  "torch>=2.9.1",
  "torchvision>=0.24.0",
  "diffusers>=0.35.2",
  "transformers>=4.57.3",
  "accelerate>=1.12.0",
]
